test/scc_test/stmt/semantic-errors/018.t
void test()
{
    char* a;
    switch(10)
    {
         case a: ;
    }
}